# uat-praxis-code

./: DELIVERY_CHECKLIST.md  EXTRACTION_GUIDE.md  EXTRACTION_README.md  EXTRACTION_SUMMARY.md  FINAL_SUMMARY.txt  LICENSE  QUICKSTART.md  README.md  praxis.yaml  push-extracted-repo.sh  pyproject.toml
docs/: capture.md  explore.md  sense.md  shape.md  sod.md
src/hello_world/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_cli.py
tests/features/: greeting.feature
tests/step_defs/: test_greeting.py
